llvm/test/tools/llubi/assume_misalign_all_ones.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

target datalayout = "po1:64:64"

define void @main() {
  call void @llvm.assume(i1 true) ["align"(ptr addrspace(1) null, i32 2048)]
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   call void @llvm.assume(i1 true) [ "align"(ptr addrspace(1) null, i32 2048) ] at @main
; CHECK-NEXT: Immediate UB detected: The pointer ptr 0xFFFFFFFFFFFFFFFF [dangling] violates align(2048) assumption.
; CHECK-NEXT: error: Execution of function 'main' failed.
